# spparks-catalyst-lattice

./: .gitignore  README  chemistry.in  meson.build  meson_options.txt  pixi.toml  test.in  test2.in
python/: spparks.py
python/examples/oscillations/: in.oscillations  log.spparks  oscillations.py
src/: app.cpp  app_surface_rxn.cpp  app_surface_rxn.h  meson.build
tools/meson/: gen_styles.py
